# ghosttrap-cli

./: .bumpversion.cfg  README.md  pyproject.toml  release.sh
ghosttrap_cli/: cli.py
tools/: freeze_skill_hash.py
